--- a/index.html
+++ b/index.html
@@ -14,22 +14,26 @@
       <button class="number">8</button>
       <button class="number">9</button>
       <button class="operator">+</button>
+      <button class="clear">C</button>
       <div class="break"></div>
       <button class="number">4</button>
       <button class="number">5</button>
       <button class="number">6</button>
       <button class="operator">-</button>
+      <button class="operator">/</button>
       <div class="break"></div>
       <button class="number">1</button>
       <button class="number">2</button>
       <button class="number">3</button>
       <button class="operator">*</button>
-      <div class="break"></div>
-      <button class="clear">C</button>
-      <button class="number zero">0</button>
-      <button class="number dot">.</button>
       <button class="result">=</button>
-      <button class="operator">/</button>
+      <div class="break"></div>
+
+      <button class="number dot">.</button>
+      <button class="number zero">0</button>
+      <button class="backspace">CE</button>
+      <button class="number"></button>
+      <button class="number"></button>
     </div>
 
     <div class="error-display"></div>
