--- a/index.html
+++ b/index.html
@@ -7,33 +7,35 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="display"></div>
-
-    <div class="numbers">
-      <button class="number">7</button>
-      <button class="number">8</button>
-      <button class="number">9</button>
-      <button class="operator">+</button>
-      <button class="clear">C</button>
-      <div class="break"></div>
-      <button class="number">4</button>
-      <button class="number">5</button>
-      <button class="number">6</button>
-      <button class="operator">-</button>
-      <button class="operator">/</button>
-      <div class="break"></div>
-      <button class="number">1</button>
-      <button class="number">2</button>
-      <button class="number">3</button>
-      <button class="operator">*</button>
-      <button class="result">=</button>
-      <div class="break"></div>
-
-      <button class="number dot">.</button>
-      <button class="number zero">0</button>
-      <button class="backspace">CE</button>
-      <button class="number"></button>
-      <button class="number"></button>
+    <div class="container">
+      <div class="display-container">
+        <div class="display"></div>
+      </div>
+      <div class="numbers">
+        <button class="backspace">CE</button>
+        <button class="clear">C</button>
+        <button class="operator">%</button>
+        <button class="operator">/</button>
+        <div class="break"></div>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="operator">*</button>
+        <div class="break"></div>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="operator">-</button>
+        <div class="break"></div>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="operator">+</button>
+        <div class="break"></div>
+        <button class="number dot">.</button>
+        <button class="number zero">0</button>
+        <button class="result">=</button>
+      </div>
     </div>
 
     <div class="error-display"></div>
