--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="error-container">
+        <div class="error-display"></div>
+      </div>
       <div class="display-container">
         <div class="display"></div>
       </div>
@@ -37,7 +40,6 @@
         <button class="result">=</button>
       </div>
     </div>
-
     <div class="error-display"></div>
     <script src="script.js"></script>
   </body>
